--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <version>7</version>
   </parent>
 
-  <groupId>com.jakewharton.rxrelay</groupId>
+  <groupId>com.jakewharton.rxrelay2</groupId>
   <artifactId>rxrelay</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <name>RxRelay</name>
-  <description>Objects that are both an Observable and an Action1.</description>
+  <description>Objects that are both an Observable and a Consumer.</description>
   <inceptionYear>2015</inceptionYear>
 
   <scm>
@@ -43,9 +43,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.reactivex</groupId>
+      <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
-      <version>1.1.3</version>
+      <version>2.0.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -70,6 +70,16 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <argLine>-Xms1024m -Xmx3072m</argLine>
+          <reuseForks>false</reuseForks>
+          <forkMode>always</forkMode>
         </configuration>
       </plugin>
     </plugins>
