--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.jakewharton.rxrelay2</groupId>
   <artifactId>rxrelay</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 
   <name>RxRelay</name>
   <description>Objects that are both an Observable and a Consumer.</description>
